--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -298,6 +298,18 @@
   align-items: center;
 }
 
+// Typeform on top of navbar (mobile version)
 .css-yqckb {
   z-index: 3000 !important;
+}
+
+
+body.modal-open {
+    position: fixed;
+    overflow: hidden;
+    left:0;
+    right:0;
+}
+.modal{
+    -webkit-overflow-scrolling: auto;
 }
